# block-breaking-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: blocks.h  collision.h  game.h  gameover.h  image.h  movement.h
src/: blocks.c  collision.c  game.c  gameover.c  image.c  main.c  main.c.bak  movement.c
